tests/paczka1/fuzzy1/22782510.err
Error in line 16: yoXmvit9Nv S956 29,8
Error in line 22: gLnZywFpaJV A779 15,2
Error in line 28: yoXmvit9Nv A122 38,1
Error in line 17: mL5yLS8TL9 A122 21,1
Error in line 23: 89Vg8Pp A779 80,6
Error in line 38: 89Vg8Pp S956 59,13
